# napari-sam2annotator

./: .gitignore  setup.cfg
napari_sam2annotator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/napari_sam2annotator/: Driver.ipynb  __init__.py  _funcs.py  _sam2_wrapper.py  _widget.py  napari.yaml
src/napari_sam2annotator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
