[metadata]
name = napari-sam2annotator
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-sam2annotator = napari_sam2annotator:napari.yaml